--- a/code/02-10_iteration_partial.qmd
+++ b/code/02-10_iteration_partial.qmd
@@ -226,7 +226,7 @@ for (i in 3:ncol(nematode_w)){
   statsum <- meancv(nematode_w[[i]])
 
   # Appending results to the empty data frame  
-  nematode_meancv$variable[[i-2]] <- varname
+  nematode_meancv$variable[[i-2]] <- varname 
   nematode_meancv$mean[[i-2]] <- statsum$mean 
   nematode_meancv$cv[[i-2]] <- statsum$cv 
   # Print a message
@@ -260,25 +260,52 @@ This approach creates a bit of a brain-twist, since we are creating data sets (a
 
 
 ```{r}
-nematode_mods 
+nematode_mods <- nematode_w %>%
   # Pivotting longer for the response variables
-
+  pivot_longer(cols = mel_s:eggs_r,
+               names_to = "resp_var", #response variables names
+               values_to = "resp_val"
+               ) %>%
   # Pivotting longer for the explanatory variables  
-
+  pivot_longer(cols = b:nli,
+               names_to = "exp_var",
+               values_to = "exp_val"
+               ) %>%
+  arrange(resp_var,exp_var) %>%
+  
   # Creating groups of resp_var and exp_var
+  group_by(resp_var,exp_var) %>%
+  nest() %>% # tibble here, holds all the values, but just put them into one tibble
 
   # Applying linear model to each element
-
+  mutate(lm = map(data,
+    ~lm(resp_val ~ exp_val,
+        data = .x
+        )
+  )) %>%
   # Extracting R2 for each element  
+  mutate(r2 = map_dbl(lm,
+                  ~summary(.x)$r.square
+                  )) #map_dbl can pull out the r2 dbl values out of the nest dataframe
+  
+nematode_mods
+nematode_mods$data[3] # to see the exact tibble, it's actually an another data.frame
 
+nematode_mods$lm[2]
+summary(nematode_mods$lm[[1]])$r.squared
 
 ```
+
 Above we used the `map()` function because we only had one iterating element (i.e., data).  
 
 Now, let's unnest the r2 values, then only keep the largest r2 for each response variable, and make some plots.  
 
 ```{r}
-nematode_mods_sel 
+nematode_mods_sel <- nematode_mods %>%
+  unnest(r2) %>%
+  group_by(resp_var) %>%
+  filter(r2 == max(r2))
+  # slice_max(r2)
 
 
 nematode_mods_sel
@@ -286,12 +313,40 @@ nematode_mods_sel
 
 
 ```{r}
-nematode_mods_sel_plots 
+nematode_mods_sel_plots <- nematode_mods_sel %>%
   # Making scatterplots with r2 in subtitle
-
+  mutate(splot = map2(data, r2,
+                      ~ggplot(data = .x,
+                              aes(x = exp_val,
+                                  y = resp_val)
+                              ) + 
+                        geom_point() +
+                        geom_smooth(method="lm") +
+                        labs(subtitle = paste("R2:", round(.y,3)))
+  )) %>%
   # Making scatterplots with r2 in subtitle, and correct x and y axis titles  
+  mutate(splot_better = pmap(list(.df = data,
+                                  .r2 = r2,
+                                  .rv =  resp_var,
+                                  .ev = exp_var),
+                             function(.df, .r2, .rv, .ev)
+                               ggplot(data = .df,
+                                      aes(x = exp_val,
+                                          y = resp_val
+                                          )
+                                      ) +
+                               geom_point() +
+                               geom_smooth(method = "lm") +
+                               labs(subtitle = paste("R2:",
+                                                     round(.r2,3)),
+                                    x = .ev,
+                                    y = .rv
+                                    )
+                                  ))
 
-
+#nematode_mods_sel_plots$splot 
+nematode_mods_sel_plots$splot[1] 
+nematode_mods_sel_plots$splot_better[1]
 ```
 Now, we had 2 iterating elements to create `splot`, so we needed to use `map2()`.  
 
